# memoview

./: .gitignore  ARCHITECTURE.md  PLAN.md  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/config/: mod.rs
src-tauri/src/graph/: incremental.rs  index.rs  mod.rs  model.rs
src-tauri/src/ipc/: mod.rs
src-tauri/src/parser/: frontmatter.rs  markdown.rs  mod.rs  patterns.rs
src-tauri/src/refactor/: mod.rs
src-tauri/src/search/: mod.rs
src-tauri/src/vault/: mod.rs
src-tauri/src/watcher/: handle.rs  mod.rs  state.rs
src/app/: BacklinksPane.tsx  CommandPalette.tsx  ContextMenu.tsx  FileTree.tsx  GraphView.tsx  Toast.tsx  UpdateChecker.tsx  VaultPicker.tsx  Workspace.tsx
src/editor/: EditorPane.tsx  createEditor.ts  livePreview.ts  theme.ts  wikilink.ts
src/ipc/: events.ts  invoke.ts  mock.ts
src/state/: folders.ts  graphStore.ts  workspaceStore.ts
