[package]
name = "memoview"
version = "0.1.0"
description = "memoview — local-first knowledge management"
edition = "2021"
rust-version = "1.77"
publish = false

[lib]
name = "memoview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros", "sync", "time"] }
anyhow = "1"
thiserror = "1"
walkdir = "2"
blake3 = "1"
rand = "0.8"
notify = "8"
notify-debouncer-full = "0.5"
dashmap = "6"
comrak = { version = "0.31", default-features = false }
serde_yaml = "0.9"
toml = "0.8"
regex = "1"
once_cell = "1"
smallvec = { version = "1", features = ["serde"] }
rayon = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
